crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__luminarch_aspirant_lowered.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&lowered"
---
{
  "abilities": [],
  "triggers": [
    {
      "mode": "Phase",
      "execute": {
        "kind": "Spell",
        "effect": {
          "type": "PutCounter",
          "counter_type": "P1P1",
          "count": {
            "type": "Fixed",
            "value": 1
          },
          "target": {
            "type": "Typed",
            "type_filters": [
              "Creature"
            ],
            "controller": "You",
            "properties": []
          }
        },
        "cost": null,
        "sub_ability": null,
        "duration": null,
        "description": null,
        "target_prompt": null,
        "condition": null,
        "optional_targeting": false,
        "optional": false,
        "forward_result": false
      },
      "valid_card": null,
      "origin": null,
      "destination": null,
      "trigger_zones": [
        "Battlefield"
      ],
      "phase": "BeginCombat",
      "optional": false,
      "damage_kind": "Any",
      "secondary": false,
      "valid_target": null,
      "valid_source": null,
      "description": "At the beginning of combat on your turn, put a +1/+1 counter on target creature you control.",
      "constraint": {
        "type": "OnlyDuringYourTurn"
      },
      "condition": null,
      "batched": false
    }
  ],
  "statics": [],
  "replacements": [],
  "extractedKeywords": []
}
