crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__mishra_eminent_one_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "id": 0,
      "source": {
        "id": {
          "item": 0,
          "ordinal": 0
        },
        "span": {
          "first_line": 0,
          "last_line": 0,
          "start_byte": 0,
          "end_byte": 305,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "At the beginning of combat on your turn, create a token that's a copy of target noncreature artifact you control, except its name is ~'s Warform and it's a 4/4 Construct artifact creature in addition to its other types. It gains haste until end of turn. Sacrifice it at the beginning of the next end step."
      },
      "node": {
        "Trigger": {
          "Parsed": {
            "condition": "Phase",
            "partial_def": {
              "mode": "Phase",
              "execute": null,
              "valid_card": null,
              "origin": null,
              "destination": null,
              "trigger_zones": [
                "Battlefield"
              ],
              "phase": "BeginCombat",
              "optional": false,
              "damage_kind": "Any",
              "secondary": false,
              "valid_target": null,
              "valid_source": null,
              "description": null,
              "constraint": {
                "type": "OnlyDuringYourTurn"
              },
              "condition": null,
              "batched": false
            },
            "body": {
              "EffectChain": {
                "clauses": [
                  {
                    "id": 0,
                    "source": {
                      "id": {
                        "item": 0,
                        "ordinal": 1
                      },
                      "span": {
                        "first_line": 0,
                        "last_line": 0,
                        "start_byte": 0,
                        "end_byte": 177,
                        "precision": "ChainRelative",
                        "ordinal_within_span": 0
                      },
                      "fragment": "create a token that's a copy of target noncreature artifact you control, except its name is ~'s Warform and it's a 4/4 Construct artifact creature in addition to its other types"
                    },
                    "disposition": {
                      "Emit": {
                        "followup": null,
                        "intrinsic": null
                      }
                    },
                    "parsed": {
                      "effect": {
                        "type": "CopyTokenOf",
                        "target": {
                          "type": "Typed",
                          "type_filters": [
                            "Artifact",
                            {
                              "Non": "Creature"
                            }
                          ],
                          "controller": "You",
                          "properties": []
                        },
                        "owner": {
                          "type": "Controller"
                        },
                        "enters_attacking": false,
                        "tapped": false,
                        "count": {
                          "type": "Fixed",
                          "value": 1
                        },
                        "additional_modifications": [
                          {
                            "type": "SetPower",
                            "value": 4
                          },
                          {
                            "type": "SetToughness",
                            "value": 4
                          },
                          {
                            "type": "AddSubtype",
                            "subtype": "Construct"
                          },
                          {
                            "type": "AddType",
                            "core_type": "Artifact"
                          },
                          {
                            "type": "AddType",
                            "core_type": "Creature"
                          },
                          {
                            "type": "SetName",
                            "name": "Mishra's Warform"
                          }
                        ]
                      },
                      "duration": null,
                      "sub_ability": null,
                      "distribute": null,
                      "multi_target": null,
                      "condition": null,
                      "optional": false,
                      "unless_pay": null
                    },
                    "boundary": "Sentence",
                    "condition": null,
                    "is_optional": false,
                    "opponent_may_scope": null,
                    "repeat_for": null,
                    "player_scope": null,
                    "starting_with": null,
                    "delayed_condition": null,
                    "prefix_delayed_condition": null,
                    "multi_target": null,
                    "where_x_expression": null,
                    "unless_pay": null
                  },
                  {
                    "id": 1,
                    "source": {
                      "id": {
                        "item": 0,
                        "ordinal": 2
                      },
                      "span": {
                        "first_line": 0,
                        "last_line": 0,
                        "start_byte": 179,
                        "end_byte": 211,
                        "precision": "ChainRelative",
                        "ordinal_within_span": 1
                      },
                      "fragment": "It gains haste until end of turn"
                    },
                    "disposition": {
                      "Emit": {
                        "followup": null,
                        "intrinsic": null
                      }
                    },
                    "parsed": {
                      "effect": {
                        "type": "GenericEffect",
                        "static_abilities": [
                          {
                            "mode": "Continuous",
                            "affected": {
                              "type": "SelfRef"
                            },
                            "modifications": [
                              {
                                "type": "AddKeyword",
                                "keyword": "Haste"
                              }
                            ],
                            "condition": null,
                            "affected_zone": null,
                            "effect_zone": null,
                            "active_zones": [],
                            "characteristic_defining": false,
                            "description": "gain haste"
                          }
                        ],
                        "duration": "UntilEndOfTurn",
                        "target": null
                      },
                      "duration": "UntilEndOfTurn",
                      "sub_ability": null,
                      "distribute": null,
                      "multi_target": null,
                      "condition": null,
                      "optional": false,
                      "unless_pay": null
                    },
                    "boundary": "Sentence",
                    "condition": null,
                    "is_optional": false,
                    "opponent_may_scope": null,
                    "repeat_for": null,
                    "player_scope": null,
                    "starting_with": null,
                    "delayed_condition": null,
                    "prefix_delayed_condition": null,
                    "multi_target": null,
                    "where_x_expression": null,
                    "unless_pay": null
                  },
                  {
                    "id": 2,
                    "source": {
                      "id": {
                        "item": 0,
                        "ordinal": 3
                      },
                      "span": {
                        "first_line": 0,
                        "last_line": 0,
                        "start_byte": 213,
                        "end_byte": 263,
                        "precision": "ChainRelative",
                        "ordinal_within_span": 2
                      },
                      "fragment": "Sacrifice it at the beginning of the next end step"
                    },
                    "disposition": {
                      "Emit": {
                        "followup": null,
                        "intrinsic": null
                      }
                    },
                    "parsed": {
                      "effect": {
                        "type": "Sacrifice",
                        "target": {
                          "type": "SelfRef"
                        },
                        "count": {
                          "type": "Fixed",
                          "value": 1
                        }
                      },
                      "duration": null,
                      "sub_ability": null,
                      "distribute": null,
                      "multi_target": null,
                      "condition": null,
                      "optional": false,
                      "unless_pay": null
                    },
                    "boundary": null,
                    "condition": null,
                    "is_optional": false,
                    "opponent_may_scope": null,
                    "repeat_for": null,
                    "player_scope": null,
                    "starting_with": null,
                    "delayed_condition": {
                      "type": "AtNextPhase",
                      "phase": "End"
                    },
                    "prefix_delayed_condition": null,
                    "multi_target": null,
                    "where_x_expression": null,
                    "unless_pay": null
                  }
                ],
                "kind": "Spell",
                "continuation_kind": null,
                "player_scope_rewrite": "Apply",
                "chain_rounding": null,
                "actor": null,
                "in_trigger": true,
                "repeat_until": null
              }
            },
            "modifiers": {
              "optional": false,
              "unless_pay": null,
              "intervening_if": null,
              "trigger_subject": {
                "type": "Any"
              },
              "first_time_limit": null,
              "constraint": null,
              "has_up_to": false,
              "effect_lower": "create a token that's a copy of target noncreature artifact you control, except its name is ~'s warform and it's a 4/4 construct artifact creature in addition to its other types. it gains haste until end of turn. sacrifice it at the beginning of the next end step.",
              "relative_player_scope": null
            },
            "source_text": "At the beginning of combat on your turn, create a token that's a copy of target noncreature artifact you control, except its name is ~'s Warform and it's a 4/4 Construct artifact creature in addition to its other types. It gains haste until end of turn. Sacrifice it at the beginning of the next end step.",
            "die_results": []
          }
        }
      }
    }
  ],
  "source_text": "At the beginning of combat on your turn, create a token that's a copy of target noncreature artifact you control, except its name is Mishra's Warform and it's a 4/4 Construct artifact creature in addition to its other types. It gains haste until end of turn. Sacrifice it at the beginning of the next end step.",
  "card_name": "Mishra, Eminent One"
}
