crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__monastery_swiftspear_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "id": 0,
      "source": {
        "id": {
          "item": 0,
          "ordinal": 0
        },
        "span": {
          "first_line": 0,
          "last_line": 0,
          "start_byte": 0,
          "end_byte": 5,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "Haste"
      },
      "node": {
        "Unsupported": {
          "unsupported": {
            "name": "unknown",
            "fragment": "Haste",
            "description": "Haste"
          },
          "min_x_value": 0
        }
      }
    },
    {
      "id": 1,
      "source": {
        "id": {
          "item": 1,
          "ordinal": 0
        },
        "span": {
          "first_line": 1,
          "last_line": 1,
          "start_byte": 6,
          "end_byte": 86,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "Prowess (Whenever you cast a noncreature spell, ~ gets +1/+1 until end of turn.)"
      },
      "node": {
        "Unsupported": {
          "unsupported": {
            "name": "unknown",
            "fragment": "Prowess",
            "description": "Prowess"
          },
          "min_x_value": 0
        }
      }
    }
  ],
  "source_text": "Haste\nProwess (Whenever you cast a noncreature spell, this creature gets +1/+1 until end of turn.)",
  "card_name": "Monastery Swiftspear"
}
